feat: Listar usuarios, actualizar usuarios, middlewares de administrador, confirmación de correo y vistas asociadas

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.admin-banner{
+    font-style: italic;
+    font-weight: bold;
+    color: rgb(192, 21, 21);
+}
