feat: maqueta página principal

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10935,11 +10935,88 @@ a.text-dark:focus {
   text-shadow: 3px 0px 1px gray;
   background-color: white;
   border-bottom: 2px solid #ccc;
+  display: block;
 }
 
 .admin-banner {
   font-style: italic;
   font-weight: bold;
   color: #c01515;
+}
+
+.main-banner {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 40px;
+  font-style: italic;
+  color: red;
+  display: block;
+  text-shadow: 1px 5px 0px black;
+  padding: 10px;
+  text-align: center;
+  border: 2px solid red;
+  border-radius: 50px;
+  background-color: white;
+  box-shadow: 1px 1px 1px black;
+  transition: all 300ms;
+}
+
+.main-banner:hover {
+  transform: scale(1.1);
+  color: orange;
+  border-color: black;
+}
+
+.products {
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+
+.products .product {
+  margin-top: 25px;
+  transition: all 300ms;
+}
+
+.products .product .card-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.products .product .product-name {
+  font-size: 25px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  text-shadow: 1px 1px 1px #4e4e4e;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.products .product:hover {
+  transform: scale(1.1);
+}
+
+.products .photo-product {
+  background-color: green;
+  height: 200px;
+}
+
+.products .photo-product img {
+  max-width: 100%;
+  height: 100%;
+}
+
+.info-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.info-container small {
+  color: #ccc;
+  order: 1;
+}
+
+.info-container strong {
+  color: red;
+  order: 0;
+  font-size: 20px;
 }
 
