--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,8 +7,21 @@
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
+//Font awesome
+@import "node_modules/font-awesome/scss/font-awesome.scss";
+
+@font-face{
+    font-family: "symbols";
+    src: url('./fonts/WebSymbols-Regular.otf');
+}
 
 // PAGINA HOME
+
+.cart-icon{
+    font-size: 30px;
+    align-self: center;
+    justify-self: center;
+}
 
 .web-title {
     font-family: "Nunito", "sans-serif";
@@ -23,7 +36,7 @@
 .admin-banner {
     font-style: italic;
     font-weight: bold;
-    color: rgb(192, 21, 21);
+    color: rgb(192, 21, 21) !important;
 }
 
 .main-banner {
@@ -56,16 +69,17 @@
         margin-top: 25px;
         transition: all 300ms;
 
-        .card-header{
+        .card-header {
             // padding-bottom: 0px;
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
-        .product-name{
+        .product-name {
             font-size: 25px;
-            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            font-family: Impact, Haettenschweiler, "Arial Narrow Bold",
+                sans-serif;
             text-shadow: 1px 1px 1px rgb(78, 78, 78);
             text-align: center;
             margin-bottom: 5px;
@@ -77,7 +91,6 @@
     }
 
     .photo-product {
-        background-color: green;
         height: 200px;
 
         img {
@@ -101,4 +114,8 @@
         order: 0;
         font-size: 20px;
     }
+}
+
+.symbols{
+    font-family: "symbols";
 }
