--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,14 +10,37 @@
 //Font awesome
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 
-@font-face{
+@font-face {
     font-family: "symbols";
-    src: url('./fonts/WebSymbols-Regular.otf');
+    src: url("./fonts/WebSymbols-Regular.otf");
+}
+
+//GENERALES
+.page-banner {
+    text-align: center;
+    display: block;
+    font-weight: bold;
+    font-style: italic;
+    background-color: #a0a0a0;
+    text-shadow: 2px 2px 1px gray;
+    font-size: 50px;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 5px 5px 2px red;
+    margin-bottom: 10px;
+    transition: all 500ms;
+}
+
+.page-banner:hover {
+    transform: scale(1.1);
+    color: white;
+    background-color: rgb(36, 36, 36);
+    box-shadow: none;
 }
 
 // PAGINA HOME
 
-.cart-icon{
+.cart-icon {
     font-size: 30px;
     align-self: center;
     justify-self: center;
@@ -116,6 +139,8 @@
     }
 }
 
-.symbols{
+.symbols {
     font-family: "symbols";
 }
+
+//Categorías
