--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -115,6 +115,8 @@
 
     .photo-product {
         height: 200px;
+        display: block;
+        text-align: center;
 
         img {
             max-width: 100%;
